# coach-jan

./: .env.example  .gitignore  Cargo.toml  PRODUCT_DESIGN.md  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FEATURES.md  FUTURE_FEATURES.md  IMPLEMENTATION_PLAN.md
docs/phases/: PHASE_0_SETUP.md  PHASE_1_AUTH_PROFILE.md  PHASE_2_PLAN_GENERATION.md
docs/plans/: 2026-02-15-phase2-plan-generation-design.md  2026-02-15-phase2-plan-generation.md  2026-02-16-phase3-implementation.md  2026-02-16-phase3-plan-viewing-design.md
docs/prompts/: phase3-handoff.md
docs/research/: mile-3k-workout-research.md  olbrecht-workout-research.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: athlete.ts  auth.ts  client.ts  plan.ts  types.ts
frontend/src/hooks/: useAthlete.ts  useAuth.ts  usePlan.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  (+3 more)
migrations/: 001_create_users.sql  002_create_athlete_profiles.sql  003_create_training_plans.sql  004_add_workout_completion_fields.sql  005_add_target_distance_km.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/ai/: client.rs  context.rs  handlers.rs  mod.rs  prompts.rs  tools.rs
src/api/: athletes.rs  auth.rs  middleware.rs  mod.rs  plans.rs
src/auth/: password.rs
src/db/: mod.rs  plans.rs  profiles.rs  sessions.rs  users.rs
src/domain/: bootstrap.rs  mod.rs  types.rs  validation.rs  workouts.rs  zones.rs
tests/: integration_tests.rs  live_claude_test.rs
(+11 files in other folders)
